mudança na descrição

--- a/index.html
+++ b/index.html
@@ -104,8 +104,8 @@
     
           <div class="w3-container w3-card w3-white w3-margin-bottom">
             <h2 class="w3-text-grey w3-padding-16"><i class="fa fa-terminal fa-fw w3-margin-right w3-xxlarge w3-text-deep-purple"></i>Sobre</h2>
-            <p>Curiosa pela vida, apaixonada por aprender e resolver problemas. Formada em Análise de Sistemas, já assumi dois cargos públicos, e atualmente ministro aulas de programação pra crianças e adolescentes na linguagem JavaScript.
-              Iniciei na tecnologia estudando Lógica de Programação com a linguagem JavaScript, HTML5, CSS3, estudei sobre UX | UI | Product Design, atualmente estou estudando React, OKRs e novos aprendizados estão por vir!</p>
+            <p>Curiosa pela vida, apaixonada por aprender e resolver problemas. Formada em Análise de Sistemas, atualmente ministro aulas de programação pra crianças e adolescentes na linguagem JavaScript.
+              Iniciei na tecnologia estudando Lógica de Programação com a linguagem JavaScript, HTML5, CSS3, estudei sobre UX | UI | Product Design, atualmente estou estudando React, OKRs e novos aprendizados que estão por vir!</p>
           </div>
 
           <div class="w3-container w3-card w3-white w3-margin-bottom">
