--- a/index.html
+++ b/index.html
@@ -209,7 +209,7 @@
     <footer class="w3-container w3-deep-purple w3-center w3-margin-top">
       <br>
       <p>Minhas Redes Sociais:</p>
-      <a href="https://github.com/eusoudany" target="_blank"><i class="fa fa-github w3-white w3-hover-opacity"></i></a>
+      <a href="https://github.com/eusoudany" target="_blank"><i class="fa fa-github w3-white w3-hover-opacity" whidth="100px"></i></a>
       <a href="https://www.linkedin.com/in/eusoudany/" target="_blank"><i class="fa fa-linkedin w3-white w3-hover-opacity"></i></a>
       <a href="https://www.instagram.com/eusoudany/" target="_blank"><i class="fa fa-instagram w3-white w3-hover-opacity"></i></a>
      
