--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
               <h5 class="w3-opacity"><b>BYJU'S Future School - Maior edtech do mundo</b></h5>
               <h5 class="w3-opacity"><b>Professora de Desenvolvimento de Software</b></h5>
               <h6 class="w3-text-deep-purple"><i class="fa fa-calendar fa-fw w3-margin-right"></i>2021 - <span class="w3-tag w3-deep-purple w3-round">Atual</span></h6>
-              <p>Docente de programação pra crianças e adolescentes.</p>
+              <p>Docente de programação para crianças e adolescentes.</p>
               <hr>
             </div>
             <div class="w3-container">
